@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <title>JBNCK - The file repository</title>
     <script>
-            
       function mobileResize(){
         if (navigator.userAgent.match(/Android/i)
                 || navigator.userAgent.match(/webOS/i)
@@ -19,6 +18,8 @@
               element.style.marginLeft = "8px"
               element.style.marginRight = "8px"
               
+              var element = document.getElementById("mobile_nav_element1");
+              element.style.display = "block"
               var element = document.getElementById("main_nav_element1");
               element.style.display = "none"
               var element = document.getElementById("main_nav_element2");
@@ -26,6 +27,7 @@
               var element = document.getElementById("main_nav_element3");
               element.style.display = "none"
               var element = document.getElementById("page_indicator1");
+              element.setAttribute("style", "display: block;");
               element.style.display = "none"
 
         }
@@ -47,7 +49,15 @@
     </script>
   </head>
   <body onload="mobileResize()">
-    <div class="page_indicator" id="page_indicator1" >
+
+    <header>
+      <div id="navbar">
+        <a id="main_nav_element1" class="nav_element nav_element_home" href="index.html">Home</a>
+        <a id="main_nav_element2" class="nav_element_current" href="downloads.html">Downloads</a>
+        <a id="main_nav_element3" class="nav_element" href="about.html">About</a>
+        <button type="button" id="mobile_nav_element1" class="mobile_nav_element" onclick="pageIndicator()" style="display: none;"><a href="#TOP" style="color: white;"> ☰ Menu</a></button>
+      </div>
+    <div style="display: none;" class="page_indicator" id="page_indicator1" >
       <center>
         <a> </a> <br>
       <a class="indicator_element indicator_element_first" href="index.html">Home</a> <hr>
@@ -58,21 +68,12 @@
 
       <button type="button" class="indicator_element_button" onclick="closePageIndicator()">&cross; Close</button>
       </center>
-    </div>
-    <header>
-      <div id="navbar">
-        <a id="main_nav_element1" class="nav_element_current nav_element_home" href="index.html">Home</a>
-        <a id="main_nav_element2" class="nav_element_current" href="downloads.html">Downloads</a>
-        <a id="main_nav_element3" class="nav_element" href="about.html">About</a>
-        <button type="button" id="mobile_nav_element1" class="mobile_nav_element" onclick="pageIndicator()" > ☰ Menu</button>
-      </div>
+    </div>      
     </header>
     <main id="resize_main">
       <h1>The file repository</h1>
       <hr>
-      <center><iframe class="download_form" src="https://jbnck.github.io/WebsiteDownloadForm/index.html" frameborder="0"></iframe></center>
+      <center><iframe height="600px" class="download_form" src="https://jbnck.github.io/WebsiteDownloadForm/index.html" frameborder="0"></iframe></center>
     </main>
-
-    <footer></footer>
   </body>
 </html>
